--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,3 +37,14 @@ jobs:
             CODE_SIGN_IDENTITY="" \
             CODE_SIGNING_REQUIRED=NO \
             CODE_SIGNING_ALLOWED=NO
+
+      - name: Prepare artifact directory
+        run: |
+          mkdir -p release
+          cp build/Build/Products/Release/dylinject release/
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: dylinject-release
+          path: release/dylinject
